# matlab-codegen-example

./: CMakeLists.txt  LICENSE  README.md  generate_code.m
matlab_code/example_for_readme/: Addition.m  main_addition_test.cpp
